--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,183 @@
-django
-gunicorn
-django-heroku
-requests
+agate==1.6.1
+agate-dbf==0.2.1
+agate-excel==0.2.3
+agate-sql==0.5.4
+aiofiles==0.4.0
+appdirs==1.4.3
+asn1crypto==0.24.0
+async-generator==1.10
+asyncio==3.4.3
+attrs==19.3.0
+awsebcli==3.19.2
+Babel==2.8.0
+backcall==0.1.0
+backports.csv==1.0.7
+bcrypt==3.1.7
+beautifulsoup4==4.8.1
+bleach==3.1.5
+blinker==1.4
+blis==0.4.1
+boto3==1.10.28
+botocore==1.19.9
+catalogue==1.0.0
+cement==2.8.2
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+cryptg==0.2.post0
+cryptography==2.7
+cycler==0.10.0
+cymem==2.0.3
+dbfread==2.0.7
+decorator==4.4.1
+defusedxml==0.6.0
+diff-match-patch==20181111
+Django==2.2.4
+django-autocomplete-light==3.8.1
+django-bootstrap-datepicker-plus==3.0.5
+django-bootstrap3==11.1.0
+django-bootstrap4==1.0.1
+django-crispy-forms==1.9.2
+django-debug-toolbar==3.1.1
+django-filter==2.2.0
+django-import-export==1.2.0
+django-material==1.5.8
+django-model-utils==4.0.0
+django-notifications-hq==1.6.0
+django-reversion==3.0.8
+django-sb-admin==0.3.7
+django-tables2==2.1.0
+django-telegrambot==1.0.1
+django-viewflow==1.5.6
+django-widget-tweaks==1.4.8
+djangorestframework==3.12.1
+django-heroku==0.3.1  
+dnspython==2.0.0
+docutils==0.15.2
+dynamic-rest==2.0.0
+en-core-web-sm==2.2.5
+entrypoints==0.3
+et-xmlfile==1.0.1
+future==0.16.0
+h11==0.9.0
+h2==3.1.1
+hpack==3.0.0
+Hypercorn==0.9.0
+hyperframe==5.2.0
+idna==2.8
+importlib-metadata==1.4.0
+inflection==0.3.1
+ipykernel==5.2.1
+ipython==7.14.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isodate==0.6.0
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.17.0
+Jinja2==2.10.3
+jmespath==0.10.0
+joblib==0.14.1
+jsonfield==3.1.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.1.0
+leather==0.3.3
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mistune==0.8.4
+more-itertools==8.1.0
+multidict==4.5.2
+murmurhash==1.0.2
+mysql-connector-python==8.0.16
+nbconvert==5.6.1
+nbformat==5.0.6
+networkx==2.4
+nltk==3.4.4
+notebook==6.0.3
+numpy==1.17.2
+odfpy==1.4.0
+opencv-python==4.2.0.32
+openpyxl==2.6.3
+packaging==20.3
+pandas==0.25.1
+pandocfilters==1.4.2
+paramiko==2.6.0
+parsedatetime==2.5
+parso==0.7.0
+pathspec==0.5.9
+pickleshare==0.7.5
+Pillow==8.0.1
+plac==1.1.3
+preshed==3.0.2
+priority==1.3.0
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
+pyaes==1.6.1
+pyasn1==0.4.5
+pycparser==2.19
+pydal==20200910.1
+Pygments==2.6.1
+PyNaCl==1.3.0
+pyparsing==2.4.6
+pypiwin32==223
+pyrsistent==0.16.0
+python-dateutil==2.8.0
+python-rest-framework==0.3.14
+python-slugify==4.0.0
+python-telegram-bot==12.2.0
+pytimeparse==1.1.8
+pytz==2019.2
+pywin32==228
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.1
+qtconsole==4.7.3
+QtPy==1.9.0
+Quart==0.10.0
+requests==2.22.0
+rsa==4.0
+s3transfer==0.2.1
+scikit-learn==0.22.1
+scipy==1.4.1
+semantic-version==2.5.0
+Send2Trash==1.5.0
+six==1.12.0
+sortedcontainers==2.1.0
+soupsieve==1.9.4
+spacy==2.2.3
+SQLAlchemy==1.3.17
+sqlparse==0.3.0
+srsly==1.0.1
+swapper==1.1.2.post1
+tablib==0.13.0
+telegram-export==1.8.2
+Telethon==1.10.6
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+text-unidecode==1.3
+thinc==7.3.1
+toml==0.10.0
+toolz==0.10.0
+tornado==6.0.3
+tqdm==4.36.1
+traitlets==4.3.3
+typing-extensions==3.7.4
+urllib3==1.25.7
+virtualenv==16.7.5
+wasabi==0.6.0
+wcwidth==0.1.9
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wsproto==0.15.0
+xlrd==1.2.0
+XlsxWriter==1.2.7
+xlwt==1.3.0
+zipp==1.0.
